Make changes based on Sonarlint.